<resources>
    <string name="app_name">Quiz Time</string>
    <string name="welcome">Welcome!</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="submit">Submit</string>
    <string name="textview">TextView</string>
    <string name="hello_user">Hello, User!</string>
    <string name="droidy">TODO</string>
    <string name="password">Password</string>
    <string name="email">Email:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="birthday_mm_dd_yyyy">Birthday(MM/DD/YYYY)</string>
    <string name="your_email">Your Email:</string>
    <string name="select_password">Select Password:</string>
    <string name="todo">TODO</string>
    <string name="hi">HI</string>
    <string name="sign_in">Login</string>
    <string name="splash_name">Hello User</string>
    <string name="username_hint">Enter User name</string>
    <string name="password_hint">Password</string>
    <string name="sign_up">Submit</string>
    <string name="user_fname">First Name</string>
    <string name="user_lname">Last Name</string>
    <string name="user_mail">Mail ID</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="user_famname">Family Name</string>
    <string name="welcome_screen">Welcome to </string>
    <string name="welcome_text"> Can you choose the right answer for each question? </string>
    <string name="start_txt">Play Game</string>
    <string name="allthebest">best of luck...</string>
    <string name="confirm">Confirm</string>

    <string name="question1">Question 1/5</string>
    <string name="question2">Question 2/5</string>
    <string name="question3">Question 3/5</string>
    <string name="question4">Question 4/5</string>
    <string name="question5">Question 5/5</string>

    <string name="question_one">What is the largest planet in our Solar System?</string>
    <string name="a_one_one">Pluto</string>
    <string name="a_one_two">Earth</string>
    <string name="a_one_three">Jupiter</string>
    <string name="a_one_four">Saturn</string>

    <string name="question_two">Which mammal first reached Earth\'s orbit alive?</string>
    <string name="a_two_one">Cat</string>
    <string name="a_two_two">Human</string>
    <string name="a_two_three">Monkey</string>
    <string name="a_two_four">Dog</string>

    <string name="question_three">What was the first successsful vaccine developed in history?</string>
    <string name="a_three_one">Rabies</string>
    <string name="a_three_two">Scarlet Fever</string>
    <string name="a_three_three">Cholera</string>
    <string name="a_three_four">Smallpox</string>

    <string name="question_four">How many spaces are on a standard Monopoly board?</string>
    <string name="a_four_one">40</string>
    <string name="a_four_two">80</string>
    <string name="a_four_three">60</string>
    <string name="a_four_four">20</string>

    <string name="question_five">Which of these cities is closest to London, Uk?</string>
    <string name="a_five_one">Miami, FL</string>
    <string name="a_five_two">Atlanta, GA</string>
    <string name="a_five_three">NewYork, NY</string>
    <string name="a_five_four">Boston, MA</string>

    <string name="you_got">You got</string>
    <string name="check">Check your answers</string>
    <string name="home_page">Home Page</string>
    <string name="previous_game"> History </string>
    <string name="alert">Alert</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="Status">Are you sure you want to confirm?</string>

</resources>
