<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/empty_bg"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:title="@null"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/back_img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20">

            </TextView>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <!-- Question 1 -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/question1"
                android:textColor="@color/white"
                android:textSize="20dp"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:elevation="10dp"
                    app:cardCornerRadius="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center"
                            android:text="@string/question_one" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dp"></View>

                        <RadioGroup
                            android:id="@+id/radioGroup_first_question"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/rb_one"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_one" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_two"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_two" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_three"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_three" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="15dp"></View>

                            <RadioButton
                                android:id="@+id/rb_four"
                                style="@style/radio_buttons"
                                android:text="@string/a_one_four" />
                        </RadioGroup>

                        <Button
                            android:id="@+id/confirm_first"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="40dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginBottom="@dimen/sp_20"
                            android:background="@drawable/round_blue_btn"
                            android:padding="10dp"
                            android:text="@string/confirm"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="@dimen/title_size" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>