<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReviewActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryDark"
            android:title="@null"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_left_arrow">

            </ImageView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_20">

            </TextView>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

<!--        <android.support.v7.widget.CardView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_margin="20dp"-->
<!--            android:elevation="10dp"-->
<!--            app:cardCornerRadius="15dp">-->

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"

                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">


                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_one" />

                        <TextView
                            android:id="@+id/first_ans_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer     : Jupiter"
                            android:textColor="@color/black">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/dark_gray">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_two" />

                        <TextView
                            android:id="@+id/second_ans_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer     : Dog"
                            android:textColor="@color/black">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/dark_gray">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_three" />

                        <TextView
                            android:id="@+id/third_ans_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer     : Smallpox"
                            android:textColor="@color/black">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/dark_gray">
">
                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_four" />

                        <TextView
                            android:id="@+id/fourth_ans_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">

                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer     : 40"
                            android:textColor="@color/black">

                        </TextView>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/dark_gray">

                        </View>

                        <TextView
                            style="@style/question_textviews"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:text="@string/question_five" />

                        <TextView
                            android:id="@+id/fifth_ans_txt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp">
                        </TextView>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Correct Answer     : Boston, MA"
                            android:textColor="@color/black">

                        </TextView>

                    </LinearLayout>

                    <Button
                        android:id="@+id/Home_page_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_blue_btn"
                        android:padding="10dp"
                        android:text="@string/home_page"
                        android:textColor="@color/white">

                    </Button>
                </LinearLayout>

            </ScrollView>
<!--        </android.support.v7.widget.CardView>-->
    </LinearLayout>


</LinearLayout>